config/kubernetes/acme.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acme-deployment
  namespace: 0aps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: acme
  template:
    metadata:
      labels:
        app: acme
    spec:
      containers:
        - name: acme
          image: ghcr.io/0aps/acme-backend
---
apiVersion: v1
kind: Service
metadata:
  name: acme-service
  namespace: 0aps
spec:
  selector:
    app: acme
  ports:
    - name: acme
      protocol: TCP
      port: 3000
      targetPort: 3000
