config/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: 0aps
spec:
  rules:
    - host: acme.0aps.fl.neosllc.org
      http:
        paths:
          - path: /v1
            pathType: ImplementationSpecific
            backend:
              service:
                name: acme-service
                port:
                  number: 3000
          - path: /docs
            pathType: ImplementationSpecific
            backend:
              service:
                name: acme-service
                port:
                  number: 3000
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-service
                port:
                  number: 8000
